client/src/css/Gallery.css
.photoClass, .logo {
    max-width: 90%;
    margin: auto;
}

#links-filter {
    list-style-type: none;
}

#links-filter li {
    display: inline-block;
}

/* Larger screens */
@media not screen and (max-width: 600px) {
    .photo {
        margin: 2px;
        padding: 0;
        height: auto;
        -webkit-transition: 0.5s ease;
        -moz-transition: 0.5s ease;
        -o-transition: 0.5s ease;
        transition: 0.5s ease;
    }

    .photo:hover {
        -webkit-transform: scale(0.95);
        -moz-transform: scale(0.95);
        -ms-transform: scale(0.95);
        -o-transform: scale(0.95);
        transform: scale(0.95);
    }

    .Gallery h3 {
        margin: 5px;
        text-align: center;
    }

    .filterDropdown {
        margin-right: 50px;
    }
}

/* Phone and smaller screens */
@media only screen and (max-width: 600px) {
    .photo {
        margin: 2px;
        padding: 0;
        -webkit-transition: 0.5s ease;
        -moz-transition: 0.5s ease;
        -o-transition: 0.5s ease;
        transition: 0.5s ease;
        width: 100px;
    }

    .Gallery h3 {
        display: none;
    }

    #links-filter {
        margin-bottom: 0;
    }

    .filterDropdown {
        margin-right: 50px;
    }
}

